--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1>This is thanhhafmcvn's website</h1>
+    <h3>URLs you can try now: <a href="https://thanhhafmcvn.github.io/quotes/">/quotes</a></h3>
 </body>
 </html>
