added fake-authentication link

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>This is thanhhafmcvn's website</h1>
     <h3>URLs you can try now: <a href="https://thanhhafmcvn.github.io/quotes/">/quotes</a></h3>
+    <h3>URLs you can try now: <a href="https://thanhhafmcvn.github.io/fake-authentication/">/fake-authentication</a></h3>
 </body>
 </html>
