--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>thanhhafmcvn</title>
 </head>
 <body>
-    <h1>This is thanhhafmcvn's website</h1>
-    <h3>URLs you can try now: <a href="https://thanhhafmcvn.github.io/quotes/">/quotes</a></h3>
-    <h3>URLs you can try now: <a href="https://thanhhafmcvn.github.io/fake-authentication/">/fake-authentication</a></h3>
+    <h3>URLs you can try now: <a href="https://thanhhafmcvn.github.io/quotes/">/quotes</a> | <a href="https://thanhhafmcvn.github.io/fake-authentication/">/fake-authentication</a> | <a href="https://thanhhafmcvn.github.io/song-db/">/song-db</a></h3>
 </body>
 </html>
